make hero section more responsive

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -12,7 +12,7 @@
 
 .leftside img {
     border-radius: 50%;
-    height: 20rem;
+    height: 18vw;
     margin: 150px;
 }
 
@@ -21,15 +21,15 @@
     display: flex;
     flex-direction: column;
     align-items:end;
-    padding-right: 10rem;
+    padding-right: 10vw;
     line-height: 0;
 }
 
 .name {
-    font-size: 10rem;
+    font-size: 8vw;
     color: #7C8964;
 }
 
 .subtext {
-    font-size: 3rem;
+    font-size: 3vw;
 }
