create project section

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-* {
+body {
     background-color: #EDEBE5;
+    margin: 0;
+    padding: 0;
     font-family: "Open Sans", sans-serif;
     color: #B0ACAC;
 }
