--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
-    background-color: #EDEBE5;
+    /* background-color: #EDEBE5; */
+    background-color: #7C8964;
     margin: 0;
     padding: 0;
     font-family: "Open Sans", sans-serif;
-    color: #B0ACAC;
+    color: #ffffffe0;
 }
