fix background color issues

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -3,7 +3,7 @@
     padding-left: 15vh;
     padding-right: 15vh;
     background-color: #ffffffe0;
-    height: 100vh;
+    min-height: 100vh;
     color: #614b3d;
 }
 
