--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,7 +1,11 @@
+.herocontainer{
+    background-color: #7C8964;
+    height: 100vh;
+}
+
 .hero {
     display: flex;
     align-items: center;
-    height: 100vh;
 }
 
 .leftside {
@@ -21,7 +25,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items:end;
+    align-items: center;
     padding-right: 10vw;
     line-height: 0;
 }
