--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,9 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px 170px;
+    padding: 20px 60px 0px 60px; 
 }
-
 .nav-menu {
     display: flex;
     align-items: center;
